[gd_scene load_steps=8 format=3 uid="uid://wvqco7kk748v"]

[ext_resource type="Theme" uid="uid://vuab2fkvice1" path="res://assets/themes/ResourcesHud.tres" id="1_qop7o"]
[ext_resource type="Script" path="res://assets/ui/resource_hud.gd" id="2_mfbra"]
[ext_resource type="Texture2D" uid="uid://ou74mxvymsi" path="res://assets/textures/tile_coin.png" id="3_mpk7w"]
[ext_resource type="Texture2D" path="res://assets/textures/fire_5.png" id="4_c5pe1"]
[ext_resource type="Texture2D" path="res://assets/textures/quartz_rock.png" id="5_prwdd"]
[ext_resource type="Texture2D" uid="uid://cbil27cpbctth" path="res://assets/textures/tree.png" id="6_064o4"]
[ext_resource type="Texture2D" uid="uid://bxpivg1861wjc" path="res://assets/textures/fruit_tree.png" id="7_uk1j4"]

[node name="ResourceHud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_qop7o")
script = ExtResource("2_mfbra")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
offset_right = 432.0
offset_bottom = 149.0
theme = ExtResource("1_qop7o")

[node name="GridContainer" type="GridContainer" parent="PanelContainer"]
layout_mode = 2
columns = 5

[node name="TextureRect" type="TextureRect" parent="PanelContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("3_mpk7w")

[node name="TextureRect2" type="TextureRect" parent="PanelContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("4_c5pe1")
expand_mode = 2

[node name="TextureRect3" type="TextureRect" parent="PanelContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("5_prwdd")
expand_mode = 2

[node name="TextureRect4" type="TextureRect" parent="PanelContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_064o4")
expand_mode = 2

[node name="TextureRect5" type="TextureRect" parent="PanelContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("7_uk1j4")
expand_mode = 2

[node name="GoldCount" type="Label" parent="PanelContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="FireCrystalCount" type="Label" parent="PanelContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="QuartzCount" type="Label" parent="PanelContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="AmberSapCount" type="Label" parent="PanelContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="FruitCount" type="Label" parent="PanelContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/GridContainer"]
layout_mode = 2
